[package]
name = "blackjack"
version = "0.1.0"
authors = ["andrew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" }

[profile.release]
opt-level = "s"
debug = false
lto = true
panic = "abort"
codegen-units = 1
